--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="title-section">
         <h1 class="main-title">그룹가치 이해 캠페인</h1>
         <h2 class="sub-title">나의 캐릭터를 찾아라!</h2>
-        <p class="description">소통과 공유를 통해 '이해'하고<br>나의 캐릭터를 찾아보세요</p>
+        <p class="description">소통과 공유를 통해 '이해'하고<br>나의 역할에 맞는 캐릭터를 찾아보세요</p>
       </div>
       <button id="startBtn" class="start-btn">시작하기</button>
     </div>
